--- a/styles/fontfaces.css
+++ b/styles/fontfaces.css
@@ -2,13 +2,13 @@
     font-family: "logo-font";
     font-weight: normal;
     font-style: normal;
-    src: url("../fonts/slackey.woff") format("woff"),
-         url("../fonts/slackey.ttf") format("truetype");
+    src: url("../fonts/russo_one.woff") format("woff"),
+         url("../fonts/russo_one.ttf") format("truetype");
 }
 @font-face {
     font-family: "default-font";
     font-weight: normal;
     font-style: normal;
-    src: url("../fonts/geo.woff") format("woff"),
-         url("../fonts/geo.ttf") format("truetype");
+    src: url("../fonts/belleza_regular.woff") format("woff"),
+         url("../fonts/belleza_regular.ttf") format("truetype");
 }
