changed styles from table#board to make it visible on the new BG

--- a/styles/main.css
+++ b/styles/main.css
@@ -153,6 +153,8 @@ ul.menu li button:active {
 /* temporary lame representation of the board */
 
 table#board td {
-    border: solid yellow 1px;
+    border: solid black 1px;
+    background: white;
+    color: black;
     height: 30px;
 }
