--- a/styles/main.css
+++ b/styles/main.css
@@ -152,9 +152,68 @@ ul.menu li button:active {
 
 /* temporary lame representation of the board */
 
+table#board {
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    font-size: 25px;
+}
+
 table#board td {
-    border: solid black 1px;
-    background: white;
-    color: black;
-    height: 30px;
+    border: solid 1px rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
+    height: 35px;
+    width: 50%;
+}
+
+table#board td.selected {
+    border: solid 1px white;
+}
+
+table#board td.group1 {
+    background: blue;
+}
+
+table#board td.group2 {
+    background: green;
+}
+
+table#board td.group3 {
+    background: orange;
+}
+
+table#board td.group4 {
+    background: purple;
+}
+
+table#board td.group5 {
+    background: red;
+}
+
+table#board td.group6 {
+    background: yellow;
+}
+
+table#board td.group7 {
+    background: navy;
+}
+
+table#board td.group8 {
+    background: #093;
+}
+
+table#board td.group9 {
+    background: #750;
+}
+
+table#board td.group10 {
+    background: #505;
+}
+
+table#board td.group11 {
+    background: #500;
+}
+
+table#board td.group12 {
+    background: #880;
 }
