Converted bg.png to jpg to save space

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ body {
     width : 10em;
     height : 15em;
     background-color : #C5CADF;
-    background-image: url("../backgrounds/bg.png");
+    background-image: url("../backgrounds/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family : default-font;
