--- a/styles/main.css
+++ b/styles/main.css
@@ -166,6 +166,21 @@ table#board {
     font-size: 25px;
 }
 
+#overlay {
+  display: none;
+  position: absolute;
+  top: 50px;
+  z-index: 32000;
+  width: 100%;
+  height: 430px;
+  background-color: #000;
+  opacity: 0.5;
+}
+
+#overlay.visible {
+  display: block;
+}
+
 table#board td {
     border: solid 2px rgba(0, 0, 0, 0.5);
     background: rgba(0, 0, 0, 0.5);
