--- a/styles/donut-chart.css
+++ b/styles/donut-chart.css
@@ -8,9 +8,8 @@
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  background-color: #f5f7fa;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 .outer-circle,
@@ -20,12 +19,12 @@
 }
 
 .outer-circle {
-  top: 6%;
-  left: 6%;
-  right: 6%;
-  bottom: 6%;
-  background-color: #fff;
-  box-shadow: inset 0 0 0 6px rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+  box-shadow: inset 0 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .inner-circle {
@@ -33,8 +32,9 @@
   left: 22%;
   right: 22%;
   bottom: 22%;
-  background-color: #f5f7fa;
+  background-color: #000;
   box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.2);
+  opacity: 0.95;
 }
 
 .inner-circle-label,
@@ -72,7 +72,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transition: all 0.4s linear;
+  transition: all 0.75s linear;
 }
 
 .wedge,
