--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-
 body {
     margin : 0;
     -webkit-touch-callout: none;
@@ -32,14 +31,34 @@ body {
 
 #top-container .screen.active {
     display : block;
+    overflow: hidden;
 }
 
+.screen-content {
+    background-color: rgba(0,0,0,0.6);
+    box-shadow: 3em 3em 10em #000;
+    border-radius: 5%;
+    padding: 5%;
+    margin: 5%;
+}
+
+.small-text {
+    font-size: 14em;
+    font-weight: bold;
+    text-shadow: 0.05em 0.05em 0.1em black;
+}
+
+.medium-text {
+    font-size: 24em;
+    font-weight: bold;
+    text-shadow: 0.05em 0.05em 0.1em black;
+}
 
 #splash-screen {
     text-align : center;
 }
 #splash-screen .logo {
-    padding-top: 0em;
+    margin-top: 2.5em;
 }
 #splash-screen .continue {
     cursor : pointer;
@@ -94,12 +113,12 @@ ul.menu li {
 button {
     font-size: 20em;
     font-family: 'Russo One', sans-serif;
-    background-size: 9em 2em;
+    background-size: 9em 2.03em;
     background-position: center;
     width: 9em;
     height: 2em;
     border: solid 0.1em rgba(0, 0, 0, 0.5);
-    border-radius : 0.5em;
+    border-radius : 0.4em;
 }
 
 button.back {
@@ -247,4 +266,48 @@ table#board td.group12 {
 
 #stats {
     font-size: 16em;
+}
+
+/* Learning Stats Screen */
+
+#deck-stats .logo {
+    font-size: 30em;
+    margin-bottom: 0;
+}
+
+#deck-stats .donut-chart {
+    margin: auto;
+}
+
+#deck-stats .donut-chart .wedge-value.too-small {
+    display: none;
+}
+
+#deck-stats figcaption dl {
+    margin-bottom: -1em; /* hack to compensate for the mysterious space at the bottom of the dl */
+}
+
+#deck-stats figcaption dt {
+    display: inline-block;
+    width: 1em;
+    padding: 0;
+    margin: 0;
+    height: 1em;
+}
+
+#deck-stats figcaption dd {
+    margin: 0 0 0 0.5em;
+    display: inline;
+}
+
+#deck-stats figcaption dd:after{
+    display: block;
+    content: '';
+}
+
+/* About Screen */
+
+#about p {
+    text-align: center;
+    margin: 1em;
 }
