--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,11 @@ body {
     text-shadow: 0.05em 0.05em 0.1em black;
 }
 
+select {
+    font-size: 12em;
+    font-weight: bold;
+}
+
 .hidden {
     visibility: hidden;
 }
@@ -108,6 +113,10 @@ body {
 
 /* Main menu styles */
 
+#main-menu .logo {
+    margin: 0.75em 0;
+}
+
 ul.menu {
     text-align : center;
     margin : 0;
@@ -116,7 +125,7 @@ ul.menu {
 }
 
 ul.menu li {
-    margin : 19em 0;
+    margin : 12em 0;
 }
 
 button {
@@ -129,6 +138,10 @@ button {
     height: 2em;
     border: solid 0.1em rgba(0, 0, 0, 0.5);
     border-radius : 0.4em;
+}
+
+button.continue {
+    background-color: green;
 }
 
 button.back {
@@ -313,4 +326,16 @@ table#board td.group12 {
 }
 #top-scores tbody tr:nth-child(odd) {
     background-color: rgba(0,0,0,0.5);
+}
+
+/* Settings Screen */
+
+#settings label {
+    display: block;
+    margin: 0.5em;
+    text-align: center;
+}
+#settings select {
+    display: block;
+    margin: auto;
 }
