Preparing for deploy

--- a/stylesheet/_buttons.scss
+++ b/stylesheet/_buttons.scss
@@ -5,7 +5,7 @@ button {
         weight: bold;
     }
     background: {
-        image: url("../images/jewel.svg");
+        image: url("images/jewel.svg");
         size: 9em 2.03em;
         position: center;
     }
