--- a/stylesheet/_game.scss
+++ b/stylesheet/_game.scss
@@ -14,7 +14,7 @@
             radius: 0.5em;
         }
         background: {
-            image: url("../images/jewel.svg");
+            image: url("images/jewel.svg");
             size: 100% 100%;
         }
         height: 1.3em;
